✨ feat: update body styles to fix position and prevent overflow

--- a/src/app.css
+++ b/src/app.css
@@ -166,3 +166,10 @@
         @apply bg-background text-foreground;
     }
 }
+
+body {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
